fix: change collector to list in stream